--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm install --legacy-peer-deps
        npx playwright install
-    - run: npm ci
+    - run: npm ci --legacy-peer-deps
     - run: npm run build --if-present
     - run: npm test
