--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm install --legacy-peer-deps
        npx playwright install
+       npx playwright install chromium
     - run: npm ci --legacy-peer-deps
     - run: npm run build
     - run: npm test
