--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,27 @@ jobs:
     - run: npm ci --legacy-peer-deps
     - run: npm run build
     - run: npm test
-    - run: npm run dev & npx wait-on http://localhost:3000
-    - run: npm run test # This command runs the Vite unit tests, specified in package.json.
-    - run: npx playwright test
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - run: npm run dev & npx wait-on http://localhost:3000
+      - run: npm run test # This command runs the Vite unit tests, specified in package.json.
+      - run: npx playwright test
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
