--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,6 +43,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: npm test
       - run: npm run dev & npx wait-on http://localhost:3000
       - run: npm run test # This command runs the Vite unit tests, specified in package.json.
