--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,11 +9,20 @@ on:
   pull_request:
     branches: [ "main" ]
 
+    
+
 jobs:
   build:
+  
+    permissions:
+      pages: write      
+      id-token: write  
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-latest
-
+    
     strategy:
       matrix:
         node-version: [20.x]
@@ -32,48 +41,9 @@ jobs:
     - run: npm ci --legacy-peer-deps
     - run: npm run build
     - run: npm test
-    - name: Create artifact output directory
-      run: mkdir build_output
-    - name: Upload static files as artifact
+    - run: npx playwright test
+    - name: Create output directory
+      run: mkdir dist
+    - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
-      with:
-        path: build_output/
-    
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-    
-    steps:
-      - uses: actions/checkout@v4ocalhost:3000
-      - run: npm run test # This command runs the Vite unit tests, specified in package.json.
-      - run: npx playwright test
-      
-  deploy:
-    needs: [build, test]
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write      
-      id-token: write  
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4 
+      uses: actions/deploy-pages@v4 
